--- a/docs/issues/2024-03.rst
+++ b/docs/issues/2024-03.rst
@@ -22,10 +22,13 @@ LLMs
 `V-STaR: Training Verifiers for Self-Taught Reasoners <https://arxiv.org/pdf/2402.06457.pdf>`_
     Deepmind and Microsoft.  LLMs do reasoning.  Let the LLM generate a bunch of solutions to a problem and have a verifier that picks the right one.  This approach trains the verifier on incorrect as well as correct approaches, which seems to improve performance.
 
-Reinforcement Learning
-----------------------
+Autonomy
+--------
 `Grandmaster-Level Chess Without Search <https://arxiv.org/pdf/2402.04494.pdf>`_
     Deepmind.  A decision transformer (I think?) plays chess without explicit heuristics or move search.  It does pretty well! - but calling it grandmaster level might be stretch since it only cross that threshold in blitz against humans, a situation which maximizes the computer's advantage
+
+`Deep Learning Based Situation Awareness for Multiple Missiles Evasion <https://arxiv.org/pdf/2402.10101.pdf>`_
+    What do you do when your drone is getting shot at by multiple missiles?  This paper uses deep learning to learn what is happening and guide decision making.
 
 Theory
 ------
@@ -38,7 +41,7 @@ Theory
 `On Limitations of the Transformer Architecture <https://arxiv.org/pdf/2402.08164.pdf>`_
     Hallucinations happen because transformers have difficulty composing functions (e.g.  birthday of Chopin's father) if the domain is large enough, though this persists in small domains as well.  This is why mathematical tasks that are compositions can pose difficulties.  Worth a read.
 
-Remote Sensing
+Doctrinaire
 -----------
 `Shrub of a thousand faces: an individual segmentation from satellite images using deep learning <https://arxiv.org/pdf/2401.17985.pdf>`_
     Doctrinaire frooom spaaaace but for shrubs.  Somehow they have better quality data for shrubs than we have for MAGI?  Integrates on the ground data and spatial data, seems to develop its own architecture for detecting/segmenting juniper shrubs.  
@@ -52,6 +55,8 @@ Remote Sensing
 `Arbitrary Scale Super-Resolution Assisted Lunar Crater Detection in Satellite Images <https://arxiv.org/pdf/2402.05068.pdf>`_
     Up-scale low resolution images for crater detection on the moon.  Has two subcomponents - one upscales (at multiple scales!) and one detects.  Seems interesting, and maybe applicable to work where resolution is low (eg MAGI) but I'm not sure how it increases the amount of information in the image?
 
+`Mind the Modality Gap: Towards a Remote Sensing Vision-Language Model via Cross-modal Alignment <https://arxiv.org/pdf/2402.09816.pdf>`_
+    CLIP for remote sensing. Finetunes CLIP, transforms info from pictures (multiple modalities?) into CLIP space to improve perfromance.  Morally similar to Doctrinaire.  Goes for scene classification instead of object detection/classificaiton. Might be worth exploring something like this
 
 Knowledge Graphs
 ----------------
@@ -74,6 +79,9 @@ Stats
 `Prior-Dependent Allocations for Bayesian Fixed-Budget Best-Arm Identification in Structured Bandits <https://arxiv.org/pdf/2402.05878.pdf>`_
     Deepmind. New strategy for fixed-budget Bayesian multi-arm bandits.  This is sort of what we want to do to dynamically jump between CAD models in doctrinaire-stuff, so worth keeping an eye on.  
 
+`Horseshoe Priors for Sparse Dirichlet-Multinomial Models <https://arxiv.org/pdf/2402.09583.pdf>`_
+    Polson has another paper in the "weird and novel priors for Dirichlet distributions" category.  Looks to be able to handle sparse count data pretty well, which was a large limitaiton of Dirichlet-multinomial models.
+    
 Applications
 ---------
 
